crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__package_failed_multiline_message_yaml.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: package_failed
  class: retryable
  message: "error[E0433]: failed to resolve\n  --> src/main.rs:1:5\n   |\n1  | use foo::bar;\n   |     ^^^ not found"
package: broken@0.1.0
