crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__package_output_debug.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PackageOutput {
        stdout_tail: "Uploading core-lib v0.1.0\nFinished",
        stderr_tail: "warning: unused import",
    },
    package: "core-lib@0.1.0",
}
