crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__package_published_yaml.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: package_published
  duration_ms: 4500
package: my-crate@1.0.0
