crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__package_skipped_yaml.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: package_skipped
  reason: already published
package: old-crate@0.9.0
