crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__package_started_yaml.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: package_started
  name: my-crate
  version: 1.0.0
package: my-crate@1.0.0
