crates/shipper-core/src/state/events/snapshots/shipper_core__state__events__tests__plan_created_yaml.snap
---
source: crates/shipper-core/src/state/events/tests.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: plan_created
  plan_id: plan-abc123
  package_count: 3
package: workspace
